--- a/cse416_frontend/src/Map.css
+++ b/cse416_frontend/src/Map.css
@@ -25,6 +25,17 @@
   flex: 1;
   overflow: hidden;
 }
+
+.leaflet-container-big > div {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
+.leaflet-container-big svg {
+  max-width: 100%;
+  height: auto;
+}
+
 .leaflet-container{
   width: 100%;
   height: 100%;
